--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,3 +113,11 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+/* padding on about me text */
+#abouttext{
+  display: flex;
+  justify-content: center;
+  padding-top: 5%;
+  margin-left:auto;
+  margin-right: auto
+}
